--- a/package.json
+++ b/package.json
@@ -1,39 +1,49 @@
 {
-  "name": "@elizaos-plugins/plugin-devin",
-  "description": "Devin API integration plugin for Eliza",
-  "version": "0.1.9",
-  "type": "module",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "exports": {
-    "./package.json": "./package.json",
-    ".": {
-      "import": {
-        "@elizaos/source": "./src/index.ts",
-        "types": "./dist/index.d.ts",
-        "default": "./dist/index.js"
-      }
+    "name": "@elizaos-plugins/plugin-devin",
+    "description": "Devin API integration plugin for Eliza",
+    "version": "0.1.9",
+    "type": "module",
+    "main": "dist/index.js",
+    "module": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "exports": {
+        "./package.json": "./package.json",
+        ".": {
+            "import": {
+                "@elizaos/source": "./src/index.ts",
+                "types": "./dist/index.d.ts",
+                "default": "./dist/index.js"
+            }
+        }
+    },
+    "files": [
+        "dist"
+    ],
+    "dependencies": {
+        "axios": "^1.0.0"
+    },
+    "devDependencies": {
+        "@biomejs/biome": "1.9.4",
+        "tsup": "8.3.5",
+        "vitest": "^3.0.0"
+    },
+    "scripts": {
+        "build": "tsup src/index.ts --format esm --dts --tsconfig ./tsconfig.json",
+        "dev": "tsup src/index.ts --format esm --dts --watch --tsconfig ./tsconfig.json",
+        "clean": "rm -rf dist",
+        "lint": "biome lint .",
+        "lint:fix": "biome check --apply .",
+        "format": "biome format .",
+        "format:fix": "biome format --write ."
+    },
+    "agentConfig": {
+        "pluginType": "elizaos:client:1.0.0",
+        "pluginParameters": {
+            "DEVIN_API_TOKEN": {
+                "type": "string",
+                "minLength": 1,
+                "description": "Devin API token is required"
+            }
+        }
     }
-  },
-  "files": [
-    "dist"
-  ],
-  "dependencies": {
-    "axios": "^1.0.0"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "tsup": "8.3.5",
-    "vitest": "^3.0.0"
-  },
-  "scripts": {
-    "build": "tsup src/index.ts --format esm --dts --tsconfig ./tsconfig.json",
-    "dev": "tsup src/index.ts --format esm --dts --watch --tsconfig ./tsconfig.json",
-    "clean": "rm -rf dist",
-    "lint": "biome lint .",
-    "lint:fix": "biome check --apply .",
-    "format": "biome format .",
-    "format:fix": "biome format --write ."
-  }
 }
